fixed contact section alignment

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -114,32 +114,16 @@ body {
     left: 38%
 }
 
-.contact h1{
-    margin-left: 3%;
-    margin-bottom: 3%;
-}
-
-.contact button{
-    margin-left: 79%;
-    margin-bottom: 1%;
-    padding-left: .5em;
-    padding-right: .5em;
-    width: fit-content;
-    height: fit-content;
-    color: #ffffff;
-    background-color: black;
-    font-family: "Roboto Mono";
-    font-size: 1.5em;
-}
-
 .contact{
     margin-top: 5%;
-    margin-left: 2%;
-    margin-right: 2%;
-    padding-left: 2%;
-    padding-right: 2%;
+    margin-left: 5%;
+    width: 90%;
+    margin-right: 15%;
     padding-bottom: 1%;  
-    
+}
+
+.contact h1{
+    margin-bottom: 3%;
 }
 
 .contact-name, .contact-subject{
@@ -147,9 +131,8 @@ body {
     color: black;
     font-size: 1.5em;
     font-family: "Roboto Mono";
-    margin-left: 3%;
-    margin-bottom: 2%;
-    width: 70%;
+    margin-bottom: 2.5%;
+    width: 55%;
     height: 4vh;
     padding-left: 1%;
 }
@@ -159,12 +142,23 @@ body {
     color: black;
     font-size: 1.5em;
     font-family: "Roboto Mono";
-    margin-left: 3%;
-    margin-bottom: 2%;
-    width: 80%;
-    height: 200px;
+    margin-bottom: 4%;
+    width: 99%;
+    height: 25vh;
     padding-left: 1%;
     line-height: 200%;
+}
+
+.contact button{
+    padding-left: .5em;
+    padding-right: .5em;
+    float: right;
+    width: fit-content;
+    height: fit-content;
+    color: #ffffff;
+    background-color: black;
+    font-family: "Roboto Mono";
+    font-size: 1.5em;
 }
 
 ::placeholder{color: black;}
